<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dialog_layout"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:fontFamily="@font/fredoka_one"
        android:textSize="35sp"
        android:text="@string/price_form"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="20sp"
        android:fontFamily="@font/fredoka_one"
        android:textSize="25sp"
        android:text="@string/min_price"
        />

    <EditText
        android:id="@+id/dialog_min_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:padding="10sp"
        android:background="@drawable/search_layout"
        android:inputType="number"
        android:textStyle="bold"
        android:textColor="@color/colorBlue"
        android:hint="@string/min_price"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_marginLeft="20sp"
        android:fontFamily="@font/fredoka_one"
        android:textSize="25sp"
        android:text="@string/max_price"
        />

    <EditText
        android:id="@+id/dialog_max_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:padding="10sp"
        android:background="@drawable/search_layout"
        android:inputType="number"
        android:textStyle="bold"
        android:textColor="@color/colorBlue"
        android:hint="@string/max_price"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/set_price_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5sp"
            android:padding="10sp"
            android:background="@drawable/button_primary_layout"
            android:fontFamily="@font/fredoka_one"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:text="@string/set_price"
            />

        <Button
            android:id="@+id/cancel_price_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:padding="10sp"
            android:background="@drawable/button_primary_layout"
            android:fontFamily="@font/fredoka_one"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:text="@string/cancel"
            />

    </LinearLayout>
</LinearLayout>