<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dialog_layout"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:fontFamily="@font/fredoka_one"
        android:textSize="35sp"
        android:textColor="@color/colorTextSecondary"
        android:text="@string/account_action"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="20sp"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/colorTextSecondary"
        android:text="Are you sure to logout or delete your account ?"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        >

        <Button
            android:id="@+id/cancel_account_action_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="10sp"
            android:textStyle="bold"
            android:background="@drawable/button_primary_layout"
            android:textColor="@color/colorTextPrimary"
            android:textSize="15sp"
            android:text="@string/cancel"
            />

        <Button
            android:id="@+id/logout_account_action_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="10sp"
            android:background="@drawable/button_primary_layout"
            android:textStyle="bold"
            android:textColor="@color/colorTextPrimary"
            android:textSize="15sp"
            android:text="@string/log_out"
            />

        <Button
            android:id="@+id/delete_account_action_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/logout_account_action_dialog"
            android:layout_marginTop="5sp"
            android:padding="10sp"
            android:background="@drawable/button_primary_layout"
            android:textStyle="bold"
            android:textColor="@color/colorTextPrimary"
            android:textSize="15sp"
            android:text="@string/delete_account"
            />

    </RelativeLayout>
</LinearLayout>