<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".user.RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/registration_image"
                android:layout_width="match_parent"
                android:layout_height="250sp"
                android:layout_alignParentTop="true"
                android:src="@drawable/registration_image"
                />

            <EditText
                android:id="@+id/registration_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/registration_image"
                android:layout_marginTop="20sp"
                android:layout_marginLeft="50sp"
                android:layout_marginRight="50sp"
                android:padding="10sp"
                android:background="@drawable/email_layout"
                android:inputType="text"
                android:hint="@string/display_name"
                android:textStyle="bold"
                android:textColor="@color/colorBlue"
                />

            <EditText
                android:id="@+id/registration_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/registration_name"
                android:layout_marginTop="10sp"
                android:layout_marginLeft="50sp"
                android:layout_marginRight="50sp"
                android:padding="10sp"
                android:background="@drawable/registration_password_layout"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textStyle="bold"
                android:textColor="@color/colorOrange"
                />

            <Button
                android:id="@+id/registration_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:layout_marginLeft="70sp"
                android:layout_marginRight="70sp"
                android:layout_below="@id/registration_password"
                android:padding="10sp"
                android:background="@drawable/button_layout"
                android:text="@string/sign_in"
                android:fontFamily="@font/fredoka_one"
                android:textSize="25sp"
                android:textColor="@color/colorWhite"
                />

            <TextView
                android:id="@+id/already_have_an_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/registration_sign_in_button"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/already_have_an_account"
                android:textSize="15sp"
                android:textColor="@color/colorPink"
                />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>