<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".admin.ShopRegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/shop_registration_image"
                android:layout_width="match_parent"
                android:layout_height="250sp"
                android:layout_alignParentTop="true"
                android:src="@drawable/shop_login_image"
                />

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_below="@id/shop_registration_image"
                android:layout_marginTop="10sp"
                android:layout_marginLeft="50sp"
                android:layout_marginRight="50sp"
                >

                <EditText
                    android:id="@+id/shop_registration_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/shop_registration_image"
                    android:layout_marginTop="10sp"
                    android:padding="10sp"
                    android:background="@drawable/input_primary_layout"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_hint"
                    android:textStyle="bold"
                    android:textColor="@color/colorInputPrimary"
                    />

                <EditText
                    android:id="@+id/shop_registration_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/shop_registration_email"
                    android:layout_marginTop="10sp"
                    android:padding="10sp"
                    android:background="@drawable/input_primary_layout"
                    android:inputType="text"
                    android:hint="@string/shop_name"
                    android:textStyle="bold"
                    android:textColor="@color/colorInputPrimary"
                    />

                <EditText
                    android:id="@+id/shop_registration_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:padding="10sp"
                    android:background="@drawable/input_primary_layout"
                    android:inputType="text"
                    android:hint="@string/shop_description"
                    android:textStyle="bold"
                    android:textColor="@color/colorInputPrimary"
                    />

                <EditText
                    android:id="@+id/shop_registration_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:padding="10sp"
                    android:background="@drawable/input_primary_layout"
                    android:inputType="text"
                    android:hint="Shop Address"
                    android:textStyle="bold"
                    android:textColor="@color/colorInputPrimary"
                    />

                <EditText
                    android:id="@+id/shop_registration_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:padding="10sp"
                    android:background="@drawable/input_primary_layout"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:textStyle="bold"
                    android:textColor="@color/colorInputPrimary"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/shop_registration_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:layout_marginLeft="70sp"
                android:layout_marginRight="70sp"
                android:layout_below="@id/layout"
                android:padding="10sp"
                android:background="@drawable/button_primary_layout"
                android:text="@string/sign_in"
                android:fontFamily="@font/fredoka_one"
                android:textSize="25sp"
                android:textColor="@color/colorTextPrimary"
                />

            <TextView
                android:id="@+id/shop_already_have_an_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/shop_registration_sign_in_button"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/already_have_a_shop_account"
                android:textSize="15sp"
                android:textColor="@color/colorTextSecondary"
                />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>